Slide in menu, grouped some similar CSS rules. Added quick media query to make menu take more space on smaller screens, to avoid overflow at bottom of nav

--- a/examples/02_slidein_menu/style.css
+++ b/examples/02_slidein_menu/style.css
@@ -54,61 +54,54 @@ nav {
     &.open {
         left: 0;
 
+        :is(a) {
+            opacity: 1;
+            transform: translateX(0);
+        }
+
         a.item-1 {
             transition: transform 1s 0.8s,
                         opacity 2s 0.8s;
-
-            opacity: 1;
-            transform: translateX(0);
         }
 
         a.item-2 {
             transition: transform 1s 1s,
                         opacity 2s 1s;
-            opacity: 1;
-            transform: translateX(0);
         }
 
         a.item-3 {
             transition: transform 1s 1.2s,
                         opacity 2s 1.2s;
-            opacity: 1;
-            transform: translateX(0);
         }
 
         a.item-4 {
             transition: transform 1s 1.4s,
                         opacity 2s 1.4s;
-            opacity: 1;
-            transform: translateX(0);
         }
     }
 
     /* For when menu closes */
-    a.item-1 {
+    :is(a) {
         transform: translateX(-30vw);
         opacity: 0;
+    }
+
+    a.item-1 {
         transition: transform 1s 0.2s,
                     opacity 2s;
     }
 
     a.item-2 {
-        transform: translateX(-30vw);
-        opacity: 0;
         transition: transform 1s 0.4s,
                     opacity 2s;
     }
 
     a.item-3 {
-        transform: translateX(-30vw);
-        opacity: 0;
         transition: transform 1s 0.6s,
                     opacity 2s;
     }
 
     a.item-4 {
-        transform: translateX(-30vw);
-        opacity: 0;
         transition: transform 1s 0.8s,
                     opacity 2s;
     }
@@ -136,6 +129,18 @@ nav {
                 font-weight: 800;
                 margin-bottom: 0.8rem;
             }
+        }
+    }
+}
+
+@media screen and (max-width:768px) {
+    nav {
+        width: 70vw;
+        left: -70vw;
+
+        :is(a) {
+            transform: translateX(-70vw);
+            opacity: 0;
         }
     }
 }
